languages/io-automaton-fe/src/test/resources/invalid/StateDefinedMultipleTimes.ioautomaton
package invalid;

automaton StateDefinedMultipleTimes{

    input int a;
    output int b;
    
    state A, B, C;
    
    initial A;
    
    state B, C;
    
    A->B;
    A->C;
}